--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,23 +3,19 @@
   <header *ngIf="isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" class="flex-shrink-0 relative h-20 bg-Jblue flex items-center">
 
         <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-60 rounded-br-full rounded-tr-full bg-indigo-500 ">
-     <h1 class="font-bold text-white mr-4">{{ (user$ | async)?.username }}</h1>
+     <h1 class="font-bold text-white mr-4">{{ (user$ | async)?.firstname }} {{ (user$ | async)?.lastname }}</h1>
       <a href="/src" class="mr-4">
         <img class="h-12 w-auto" src="../../assets/logo_round.png" alt="Workflow">
       </a>
     </div>
-    <!-- Menu button area -->
     <nav  class="absolute inset-y-0 right-0 pr-4 flex items-center sm:pr-6 md:hidden">
-      <!-- Mobile menu button -->
       <button (click)="openNav()" type="button" class="-mr-2 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-600">
-        <!-- Heroicon name: outline/menu -->
         <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
       </button>
 
     </nav>
-    <!-- Mobile menu, show/hide this `div` based on menu open/closed state -->
       <div *ngIf="isShownNav" class="hidden sm:block sm:fixed sm:inset-0 sm:bg-gray-600 sm:bg-opacity-75" aria-hidden="true"></div>
       <nav *ngIf="isLoggedIn && isShownNav" class="fixed z-40 inset-0 h-full w-full bg-white sm:inset-y-0 sm:left-auto sm:right-0 sm:max-w-sm sm:w-full sm:shadow-lg" aria-label="Global">
         <div class="h-16 flex items-center justify-between px-4 sm:px-6">
