added skillitems to datacard

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,8 +2,8 @@
   <!-- Top nav-->
   <header *ngIf="isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" class="flex-shrink-0 relative h-20 bg-Jblue flex items-center">
 
-        <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-60 rounded-br-full rounded-tr-full bg-indigo-500 ">
-     <h1 class="font-bold text-white mr-4">{{ (user$ | async)?.firstname }} {{ (user$ | async)?.lastname }}</h1>
+        <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-80 rounded-br-full rounded-tr-full bg-indigo-500 ">
+     <h1 class="font-bold text-white mr-4 ml-4">{{ (user$ | async)?.firstname }} {{ (user$ | async)?.lastname }}</h1>
       <a href="/src" class="mr-4">
         <img class="h-12 w-auto" src="../../assets/logo_round.png" alt="Workflow">
       </a>
@@ -97,7 +97,7 @@
 
         <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/skills'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Skills</span>
-          <fa-icon transform="grow-18" [icon]="faLightbulb"></fa-icon>
+          <fa-icon transform="grow-18" [icon]="faBrain"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Skills</span>
 
 
