--- a/src/app/skill-feature/skill-form/skill-form.component.html
+++ b/src/app/skill-feature/skill-form/skill-form.component.html
@@ -31,14 +31,13 @@
 
           <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
 
-            //skill Items here
 
           </div>
 
           <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
             <diV hidden>
-              <input type="text"  name="candidateId" id="candidateId" formControlName="candidateId">
-              <input type="checkbox"  name="active" id="active" formControlName="active">
+              <input type="text"  name="candidateId" id="skillandidateId" formControlName="candidateId">
+              <input type="checkbox"  name="active" id="skillActive" formControlName="active">
             </diV>
 
           </div>
