--- a/src/app/dashboard-feature/cv-items/cv-items.component.html
+++ b/src/app/dashboard-feature/cv-items/cv-items.component.html
@@ -1,3 +1,138 @@
 <div class="container mx-auto px-6 mt-6 mb-6">
-  <h1>data cards</h1>
+
+
+  <div class="drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-4">
+    <div class="px-4 py-5 sm:px-6  bg-Jorange ">
+      <div class="flex flex-row">
+          <h1 class="text-xl leading-6 font-bold text-white">Skills:</h1>
+      </div>
+    </div>
+  </div>
+  <div *ngFor="let skill of mySkills$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
+      <div class="flex flex-row">
+        <div class="basis-[97%]">
+          <h3 class="text-xl leading-6 font-bold text-white">{{skill.name}}</h3>
+        </div>
+        <div class="flex justify-center">
+          <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
+            <input type="checkbox"  *ngIf="skill.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <input type="checkbox"  *ngIf="skill.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <span class="ml-3" id="skillActive">
+          <span *ngIf="skill.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span  *ngIf="skill.active === true" class="text-lg font-bold text-Jorange ">Active </span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2  mt-4">
+    <div class="px-4 py-5 sm:px-6  bg-Jorange ">
+      <div class="flex flex-row">
+        <h1 class="text-xl leading-6 font-bold text-white">Certificates:</h1>
+      </div>
+    </div>
+  </div>
+  <div *ngFor="let certificate of myCertificates$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
+      <div class="flex flex-row">
+        <div class="basis-[97%]">
+          <h3 class="text-xl leading-6 font-bold text-white">{{certificate.name}}</h3>
+        </div>
+        <div class="flex justify-center">
+          <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
+            <input type="checkbox"  *ngIf="certificate.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <input type="checkbox"  *ngIf="certificate.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <span class="ml-3" id="certificateActive">
+          <span *ngIf="certificate.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span  *ngIf="certificate.active === true" class="text-lg font-bold text-Jorange ">Active </span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2  mt-4">
+    <div class="px-4 py-5 sm:px-6  bg-Jorange ">
+      <div class="flex flex-row">
+        <h1 class="text-xl leading-6 font-bold text-white">Education:</h1>
+      </div>
+    </div>
+  </div>
+  <div *ngFor="let education of myEducations$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
+      <div class="flex flex-row">
+        <div class="basis-[97%]">
+          <h3 class="text-xl leading-6 font-bold text-white">{{education.diploma}}</h3>
+        </div>
+        <div class="flex justify-center">
+          <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
+            <input type="checkbox"  *ngIf="education.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <input type="checkbox"  *ngIf="education.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <span class="ml-3" id="educationActive">
+          <span *ngIf="education.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span  *ngIf="education.active === true" class="text-lg font-bold text-Jorange ">Active </span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2  mt-4">
+    <div class="px-4 py-5 sm:px-6  bg-Jorange ">
+      <div class="flex flex-row">
+        <h1 class="text-xl leading-6 font-bold text-white">Experience:</h1>
+      </div>
+    </div>
+  </div>
+  <div *ngFor="let experience of myExperiences$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
+      <div class="flex flex-row">
+        <div class="basis-[97%]">
+          <h3 class="text-xl leading-6 font-bold text-white">{{experience.profession}}</h3>
+        </div>
+        <div class="flex justify-center">
+          <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
+            <input type="checkbox"  *ngIf="experience.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <input type="checkbox"  *ngIf="experience.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <span class="ml-3" id="experienceActive">
+          <span *ngIf="experience.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span  *ngIf="experience.active === true" class="text-lg font-bold text-Jorange ">Active </span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2  mt-4">
+    <div class="px-4 py-5 sm:px-6  bg-Jorange ">
+      <div class="flex flex-row">
+        <h1 class="text-xl leading-6 font-bold text-white">Language:</h1>
+      </div>
+    </div>
+  </div>
+  <div *ngFor="let language of myLanguages$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
+      <div class="flex flex-row">
+        <div class="basis-[97%]">
+          <h3 class="text-xl leading-6 font-bold text-white">{{language.name}}</h3>
+        </div>
+        <div class="flex justify-center">
+          <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
+            <input type="checkbox"  *ngIf="language.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <input type="checkbox"  *ngIf="language.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+            <span class="ml-3" id="languageActive">
+          <span *ngIf="language.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span  *ngIf="language.active === true" class="text-lg font-bold text-Jorange ">Active </span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
