--- a/src/app/dashboard-feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard-feature/dashboard/dashboard.component.html
@@ -2,10 +2,9 @@
       <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last">
         <app-cv-template></app-cv-template>
       </main>
-      <aside class="hidden relative xl:order-first xl:flex xl:flex-col flex-shrink-0 w-96 border-r border-gray-200 overflow-y-auto">
-        <!-- Start secondary column (hidden on smaller screens) -->
-        <app-cv-items></app-cv-items>
-      </aside>
+<!--      <aside class="hidden relative xl:order-first xl:flex xl:flex-col flex-shrink-0 w-96 border-r border-gray-200 overflow-y-auto">-->
+<!--        <app-cv-items></app-cv-items>-->
+<!--      </aside>-->
     </div>
 
 
