--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -17,3 +17,8 @@ header {
   background-image: url("../../assets/background.png");
   background-size: cover ;
 }
+
+.grow:hover{
+  transform: rotate(0.75turn);
+  transform: scale(1.2);
+}
