--- a/src/app/dashboard-feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard-feature/dashboard/dashboard.component.html
@@ -1,7 +1,14 @@
  <div class="flex-1 relative z-0 flex overflow-hidden">
       <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last">
-        <app-cv-template></app-cv-template>
+        <div [ngClass]="company === true && candidate === true ? 'grid grid-cols-2 gap-4 mb-[70px]':''">
+
+
+            <app-candidates [ngClass]="company === true && candidate === true ? '2xl:w-3/4 flex':''" *ngIf="company === true"></app-candidates>
+            <app-cv-template  [ngClass]="company === true && candidate === true ? '2xl:ml-[-230px] 2xl:w-1/2':''" *ngIf="candidate === true"></app-cv-template>
+
+        </div>
       </main>
+
 <!--      <aside class="hidden relative xl:order-first xl:flex xl:flex-col flex-shrink-0 w-96 border-r border-gray-200 overflow-y-auto">-->
 <!--        <app-cv-items></app-cv-items>-->
 <!--      </aside>-->
