--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,8 +4,8 @@
 
         <div class="md:flex-shrink-0 flex items-center justify-end h-20 w-80 rounded-br-full rounded-tr-full bg-indigo-500 ">
      <h1 class="font-bold text-white mr-4 ml-4">{{ (user$ | async)?.firstname }} {{ (user$ | async)?.lastname }}</h1>
-      <a href="/src" class="mr-4">
-        <img class="h-12 w-auto" src="../../assets/logo_round.png" alt="Workflow">
+      <a href="/dashboard" class="mr-4">
+        <img class="h-12 w-auto grow" src="../../assets/logo_round.png" alt="Workflow">
       </a>
     </div>
     <nav  class="absolute inset-y-0 right-0 pr-4 flex items-center sm:pr-6 md:hidden">
@@ -59,20 +59,26 @@
     <nav *ngIf="isLoggedIn == true ||(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [ngClass]="!isExtendSideBar ? '': 'w-60 sidebar'" class="hidden md:block md:flex-shrink-0 md:bg-Jorange md:overflow-y-auto" aria-label="Sidebar">
       <div class="relative w-20 flex flex-col p-3 space-y-3">
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'" class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/dashboard'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  [routerLinkActive]="['bg-JorangeSelect']"
+           class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 mt-1 rounded-lg">
           <fa-icon transform="grow-18" [icon]="faFile"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">CV</span>
         </a>
 
 
+        <a *ngIf="(user$ | async)?.role === 'COMPANY'" [routerLink]="'/dashboard'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="hover:bg-JorangeSelect text-white flex-shrink-0 inline-flex items-center justify-center h-14 mt-1 rounded-lg">
+          <fa-icon transform="grow-18" [icon]="faPeopleGroup"></fa-icon>
+          <span *ngIf="isExtendSideBar" class="ml-6">Candidates</span>
+        </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/contactinfo'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [routerLink]="'/contactinfo'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Contact info</span>
           <fa-icon transform="grow-18" [icon]="faIdCard"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Contact info</span>
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/educations'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/educations'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Educations</span>
           <fa-icon transform="grow-18" [icon]="faGraduationCap"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Educations</span>
@@ -80,14 +86,14 @@
 
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/certificates'"  [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/certificates'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Certificates</span>
           <fa-icon transform="grow-18" [icon]="faCertificate"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Certificates</span>
 
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/experiences'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/experiences'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Experiences</span>
           <fa-icon transform="grow-18" [icon]="faBriefcase"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Experiences</span>
@@ -95,7 +101,7 @@
 
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/skills'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/skills'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Skills</span>
           <fa-icon transform="grow-18" [icon]="faBrain"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Skills</span>
@@ -103,19 +109,19 @@
 
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/languages'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE'" [routerLink]="'/languages'" [routerLinkActive]="['bg-JorangeSelect']" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Languages</span>
           <fa-icon transform="grow-18" [icon]="faEarthEurope"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Languages</span>
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [routerLink]="'/settings'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" [routerLinkActive]="['bg-JorangeSelect']" [routerLink]="'/settings'" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg">
           <span class="sr-only">Settings</span>
           <fa-icon transform="grow-18" [icon]="faGear"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Settings</span>
         </a>
 
-        <a *ngIf="(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" href="/login" [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg" (click)="logOut()">
+        <a *ngIf="(user$ | async)?.role === 'CANDIDATE' || (user$ | async)?.role === 'COMPANY'" href="/login" [routerLinkActive]="['bg-JorangeSelect']"s [ngClass]="!isExtendSideBar ? 'w-14': 'w-52'"  class="text-white hover:bg-JorangeSelect flex-shrink-0 inline-flex items-center justify-center h-14 w-14 mt-1 rounded-lg" (click)="logOut()">
           <span class="sr-only">Logout</span>
           <fa-icon transform="grow-18" [icon]="faRightFromBracket"></fa-icon>
           <span *ngIf="isExtendSideBar" class="ml-6">Logout</span>
