--- a/src/app/skill-feature/skill/skill.component.html
+++ b/src/app/skill-feature/skill/skill.component.html
@@ -1,5 +1,8 @@
 <div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 ">
   <div class="max-w-3xl mx-auto">
+    <app-to-dashboard [title]="skillForm.value.name"
+                      class="mt-6 flex "
+    ></app-to-dashboard>
     <!-- data cards -->
     <div *ngFor="let skill of mySkills$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
       <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
